@@ -71,6 +71,7 @@ A Space Adventure:
 A Classic Fairytale:
  + Mission 3: Display number of turns left at timed parcours
  + Mission 2, Mission 5: Reduce computer hog levels
+ + Mission 6: Change mines
  * Fix incorrect storytelling in mission descriptions
  * Mission 1: Fix error message spam when Leaks a Lot drowns
  * Mission 3: Fix cannibals sometimes doing nothing for a full turn
